<resources>
    <string name="app_name">Popular Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">themoviedb.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="overview">Overview</string>
    <string name="released_date">Released Date</string>
    <string name="user_score">Vote Average</string>
    <string name="image_of_movie">Image of movie</string>
    <string name="no_internet">No internet connection</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top rated</string>
    <string name="vote_count">Vote Count</string>
</resources>
